Updated options for calc_hazard_curves

--- a/hazardlib/HazardCurves.ipynb
+++ b/hazardlib/HazardCurves.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Hazard curves calculation in openquake.hazardlib"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "LICENSE\n",
@@ -57,7 +63,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -80,7 +88,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Hazard curves from area sources with point and finite ruptures"
    ]
@@ -89,7 +100,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -116,7 +129,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -143,7 +158,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -151,8 +168,8 @@
     "imls = [0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145,\n",
     "        0.203, 0.284, 0.397, 0.556, 0.778, 1.09, 1.52, 2.13]\n",
     "curves1 = calc_hazard_curves(\n",
-    "    sources=[src1],\n",
-    "    sites=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
+    "    groups=[src1],\n",
+    "    ss_filter=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
     "    imtls={'PGA': imls},\n",
     "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=None\n",
@@ -163,14 +180,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# compute hazard curve from src2\n",
     "curves2 = calc_hazard_curves(\n",
-    "    sources=[src2],\n",
-    "    sites=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
+    "    groups=[src2],\n",
+    "    ss_filter=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
     "    imtls={'PGA': imls},\n",
     "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=None\n",
@@ -181,7 +200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -199,7 +220,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Hazard curves from area sources with different nodal planes"
    ]
@@ -208,7 +232,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -235,7 +261,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -262,7 +290,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -270,8 +300,8 @@
     "imls = [0.005, 0.007, 0.0098, 0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145,\n",
     "        0.203, 0.284, 0.397, 0.556, 0.778, 1.09, 1.52, 2.13]\n",
     "curves1 = calc_hazard_curves(\n",
-    "    sources=[src1],\n",
-    "    sites=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
+    "    groups=[src1],\n",
+    "    ss_filter=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
     "    imtls={'PGA': imls},\n",
     "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=None\n",
@@ -282,14 +312,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# compute hazard curve from src2\n",
     "curves2 = calc_hazard_curves(\n",
-    "    sources=[src2],\n",
-    "    sites=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
+    "    groups=[src2],\n",
+    "    ss_filter=SiteCollection([Site(location=Point(0., 0.), vs30=760., vs30measured=True, z1pt0=40., z2pt5=1.)]),\n",
     "    imtls={'PGA': imls},\n",
     "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=None\n",
@@ -300,7 +332,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -333,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
