htmk notebook update

--- a/hmtk/02 - Building Source Models.ipynb
+++ b/hmtk/02 - Building Source Models.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "source_model.serialise_to_nrml(\"New_Aegean_Source_Model.xml\")"
+    "source_model.serialise_to_nrml(\"output_data/New_Aegean_Source_Model.xml\")"
    ]
   },
   {
