--- a/hmtk/03 - Geology.ipynb
+++ b/hmtk/03 - Geology.ipynb
@@ -380,7 +380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1018,7 +1020,7 @@
    },
    "outputs": [],
    "source": [
-    "corinth_output_file = \"New_Gulf_Of_Corinth_Faults.xml\"\n",
+    "corinth_output_file = \"output_data/New_Gulf_Of_Corinth_Faults.xml\"\n",
     "corinth_faults.source_model.serialise_to_nrml(corinth_output_file)\n",
     "show_file_contents(corinth_output_file)"
    ]
