Fixes to gmpe-smtk notebook, new demo

--- a/gmpe-smtk/03 - Residuals-Training.ipynb
+++ b/gmpe-smtk/03 - Residuals-Training.ipynb
@@ -443,10 +443,10 @@
    "outputs": [],
    "source": [
     "# Run LLH analysis\n",
-    "llh_values, weights = llh_1.get_loglikelihood_values()\n",
+    "llh_values, weights = llh_1.get_loglikelihood_values(imt_list)\n",
     "\n",
     "for gmpe in gmpe_list:\n",
-    "    print \"LLH(%s) = %12.6f  Weight = %12.6f\" % (gmpe, llh_values[gmpe], weights[gmpe])"
+    "    print \"LLH(%s) = %12.6f  Weight = %12.6f\" % (gmpe, llh_values[gmpe][\"All\"], weights[gmpe])"
    ]
   },
   {
