--- a/hmtk/03 - Geology.ipynb
+++ b/hmtk/03 - Geology.ipynb
@@ -405,7 +405,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from hmtk.plotting.faults.geology_mfd_plot import plot_recurrence_models\n",
+    "from openquake.hmtk.plotting.faults.geology_mfd_plot import plot_recurrence_models\n",
     "from openquake.hazardlib.scalerel.wc1994 import WC1994  # In all the following examples the Wells & Coppersmith (1994) Scaling Relation is Used"
    ]
   },
@@ -762,7 +762,7 @@
    "outputs": [],
    "source": [
     "# Import the Parser\n",
-    "from hmtk.parsers.faults.fault_yaml_parser import FaultYmltoSource\n",
+    "from openquake.hmtk.parsers.faults.fault_yaml_parser import FaultYmltoSource\n",
     "\n",
     "# Fault mesh discretization step\n",
     "mesh_spacing = 1.0 # (km)\n",
@@ -866,7 +866,7 @@
    "outputs": [],
    "source": [
     "# For plotting\n",
-    "from hmtk.plotting.mapping import HMTKBaseMap\n",
+    "from openquake.hmtk.plotting.mapping import HMTKBaseMap\n",
     "corinth_fault_file = \"input_data/GulfOfCorinth_Faults.yml\"\n",
     "\n",
     "reader = FaultYmltoSource(corinth_fault_file)\n",
@@ -952,8 +952,8 @@
    },
    "outputs": [],
    "source": [
-    "from hmtk.parsers.catalogue.csv_catalogue_parser import CsvCatalogueParser\n",
-    "from hmtk.seismicity.selector import CatalogueSelector\n",
+    "from openquake.hmtk.parsers.catalogue.csv_catalogue_parser import CsvCatalogueParser\n",
+    "from openquake.hmtk.seismicity.selector import CatalogueSelector\n",
     "\n",
     "# Load in the catalogue\n",
     "catalogue_file = \"input_data/Aegean_ExtendedCat1.csv\"\n",
