--- a/hmtk/04 - Geodesy.ipynb
+++ b/hmtk/04 - Geodesy.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "from hmtk.parsers.strain.strain_csv_parser import ReadStrainCsv\n",
+    "from openquake.hmtk.parsers.strain.strain_csv_parser import ReadStrainCsv\n",
     "\n",
     "strain_file = 'input_data/average_strain_minimal.csv'\n",
     "fid = open(strain_file, 'r')\n",
@@ -89,7 +91,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from hmtk.parsers.strain.strain_csv_parser import ReadStrainCsv\n",
+    "from openquake.hmtk.parsers.strain.strain_csv_parser import ReadStrainCsv\n",
     "\n",
     "reader = ReadStrainCsv(strain_file)\n",
     "\n",
@@ -148,13 +150,11 @@
    },
    "outputs": [],
    "source": [
-    "from hmtk.strain.regionalisation.kreemer_regionalisation import KreemerRegionalisation\n",
+    "from openquake.hmtk.strain.regionalisation.kreemer_regionalisation import KreemerRegionalisation\n",
     "\n",
     "regionalisation = KreemerRegionalisation()\n",
     "\n",
-    "strain_data = regionalisation.get_regionalisation(strain_data)\n",
-    "\n",
-    "                                         "
+    "strain_data = regionalisation.get_regionalisation(strain_data)                              "
    ]
   },
   {
@@ -288,7 +288,7 @@
    },
    "outputs": [],
    "source": [
-    "from hmtk.parsers.strain.strain_csv_parser import WriteStrainCsv\n",
+    "from openquake.hmtk.parsers.strain.strain_csv_parser import WriteStrainCsv\n",
     "\n",
     "output_file = 'output_data/SHIFT_Demo_Output1.csv'\n",
     "\n",
