Fixed third notebook

--- a/hazardlib/02_GMPEs.ipynb
+++ b/hazardlib/02_GMPEs.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GMPEs in openquake.hazardlib"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "# GMPEs in openquake.hazardlib\n",
+    "<tt>\n",
     "\n",
     "LICENSE\n",
     "\n",
@@ -50,7 +45,8 @@
     "PURPOSE. See the GNU General Public License for more details.\n",
     "\n",
     "The GEM Foundation, and the authors of the software, assume no liability for\n",
-    "use of the software."
+    "use of the software.\n",
+    "</tt>"
    ]
   },
   {
@@ -72,6 +68,7 @@
     "from openquake.hazardlib.imt import PGA\n",
     "from openquake.hazardlib.const import StdDev\n",
     "from openquake.hazardlib.gsim.base import ContextMaker\n",
+    "from openquake.hazardlib.const import TRT\n",
     "\n",
     "import numpy\n",
     "\n",
@@ -110,16 +107,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, gmpe in get_available_gsims().items():\n",
-    "    print name\n",
-    "    print 'supported tectonic region: %s'% gmpe.DEFINED_FOR_TECTONIC_REGION_TYPE\n",
-    "    print 'supported intensity measure types: %s' % ', '.join([imt.__name__ for imt in gmpe.DEFINED_FOR_INTENSITY_MEASURE_TYPES])\n",
-    "    print 'supported component: %s' % gmpe.DEFINED_FOR_INTENSITY_MEASURE_COMPONENT\n",
-    "    print 'supported standard deviations: %s' % ', '.join([std for std in gmpe.DEFINED_FOR_STANDARD_DEVIATION_TYPES])\n",
-    "    print 'required site parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_SITES_PARAMETERS])\n",
-    "    print 'required rupture parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_RUPTURE_PARAMETERS])\n",
-    "    print 'required distance parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_DISTANCES])\n",
-    "    print"
+    "for i, (name, gmpe) in enumerate(get_available_gsims().items()):\n",
+    "    print(name)\n",
+    "    print('supported tectonic region: %s'% gmpe.DEFINED_FOR_TECTONIC_REGION_TYPE)\n",
+    "    print('supported intensity measure types: %s' % ', '.join([imt.__name__ for imt in gmpe.DEFINED_FOR_INTENSITY_MEASURE_TYPES]))\n",
+    "    print('supported component: %s' % gmpe.DEFINED_FOR_INTENSITY_MEASURE_COMPONENT)\n",
+    "    print('supported standard deviations: %s' % ', '.join([std for std in gmpe.DEFINED_FOR_STANDARD_DEVIATION_TYPES]))\n",
+    "    print('required site parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_SITES_PARAMETERS]))\n",
+    "    print('required rupture parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_RUPTURE_PARAMETERS]))\n",
+    "    print('required distance parameters: %s' % ', '.join([p for p in gmpe.REQUIRES_DISTANCES]))\n",
+    "    print('')\n",
+    "    if i > 5:\n",
+    "        break"
    ]
   },
   {
@@ -184,15 +183,15 @@
     "# loop over ruptures. For each rupture extract magnitude and median value\n",
     "means = []\n",
     "mags = []\n",
-    "context_maker = ContextMaker(gmpes)\n",
+    "context_maker = ContextMaker(trt=TRT.ACTIVE_SHALLOW_CRUST, gsims=gmpes)\n",
     "for rupture in src.iter_ruptures():\n",
     "    mags.append(rupture.mag)\n",
     "\n",
     "    values = []\n",
     "    for gmpe in gmpes:\n",
     "\n",
-    "        sctx, rctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
-    "        [mean], [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
+    "        sctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
+    "        [mean], [std] = gmpe.get_mean_and_stddevs(sctx, rupture, dctx, PGA(), [StdDev.TOTAL])\n",
     "\n",
     "        values.append(numpy.exp(mean))\n",
     "\n",
@@ -256,10 +255,10 @@
     "values = []\n",
     "for gmpe in gmpes:\n",
     "\n",
-    "    sctx, rctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
-    "    mean, [std] = gmpe.get_mean_and_stddevs(sctx, rctx, dctx, PGA(), [StdDev.TOTAL])\n",
+    "    sctx, dctx = context_maker.make_contexts(site_collection, rupture)\n",
+    "    mean, [std] = gmpe.get_mean_and_stddevs(sctx, rupture, dctx, PGA(), [StdDev.TOTAL])\n",
     "\n",
-    "    values.append(numpy.exp(mean))\n"
+    "    values.append(numpy.exp(mean))"
    ]
   },
   {
@@ -279,27 +278,34 @@
     "pyplot.title('Magnitude %s' % rupture.mag, fontsize=20)\n",
     "pyplot.legend(loc=\"upper left\", bbox_to_anchor=(1,1));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
