Fixed all notebooks in the hazard folder

--- a/hazardlib/04_Disaggregation.ipynb
+++ b/hazardlib/04_Disaggregation.ipynb
@@ -7,16 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Disaggregation calculation in openquake.hazardlib"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "# Disaggregation calculation in openquake.hazardlib\n",
+    "\n",
+    "<tt>\n",
     "\n",
     "LICENSE\n",
     "\n",
@@ -56,7 +49,8 @@
     "PURPOSE. See the GNU General Public License for more details.\n",
     "\n",
     "The GEM Foundation, and the authors of the software, assume no liability for\n",
-    "use of the software."
+    "use of the software.\n",
+    "</tt>"
    ]
   },
   {
@@ -216,7 +210,7 @@
     "    site=site,\n",
     "    imt=PGA(),\n",
     "    iml=iml,\n",
-    "    gsims={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
+    "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=3,\n",
     "    n_epsilons=3,\n",
     "    mag_bin_width=0.5,\n",
@@ -234,6 +228,8 @@
    },
    "outputs": [],
    "source": [
+    "diss_matrix = numpy.squeeze(diss_matrix)\n",
+    "\n",
     "# compute magnitude distance disaggregation\n",
     "mag_dist = mag_dist_pmf(diss_matrix)\n",
     "mag_dist = mag_dist.T\n",
@@ -277,7 +273,7 @@
     "    site=site,\n",
     "    imt=PGA(),\n",
     "    iml=iml,\n",
-    "    gsims={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
+    "    gsim_by_trt={'Active Shallow Crust': CampbellBozorgnia2008()},\n",
     "    truncation_level=3,\n",
     "    n_epsilons=3,\n",
     "    mag_bin_width=0.5,\n",
@@ -295,6 +291,8 @@
    },
    "outputs": [],
    "source": [
+    "diss_matrix = numpy.squeeze(diss_matrix)\n",
+    "\n",
     "# compute magnitude distance disaggregation\n",
     "mag_dist = mag_dist_pmf(diss_matrix)\n",
     "mag_dist = mag_dist.T\n",
@@ -311,27 +309,34 @@
     "ax.set_zlabel('Probability of exceedance')\n",
     "ax.view_init(azim=50.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
