--- a/hazardlib/05_StochasticEventSets.ipynb
+++ b/hazardlib/05_StochasticEventSets.ipynb
@@ -7,16 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Stochastic event set generation in openquake.hazardlib"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "# Stochastic event set generation in openquake.hazardlib\n",
+    "\n",
+    "<tt>\n",
     "\n",
     "LICENSE\n",
     "\n",
@@ -56,7 +49,8 @@
     "PURPOSE. See the GNU General Public License for more details.\n",
     "\n",
     "The GEM Foundation, and the authors of the software, assume no liability for\n",
-    "use of the software."
+    "use of the software.\n",
+    "</tt>"
    ]
   },
   {
@@ -87,14 +81,16 @@
     "from openquake.hazardlib.geo import Point, NodalPlane, Polygon\n",
     "from openquake.hazardlib.pmf import PMF\n",
     "from openquake.hazardlib.tom import PoissonTOM\n",
-    "from openquake.hazardlib.calc import stochastic_event_set\n",
+    "from openquake.hazardlib.calc.stochastic import stochastic_event_set\n",
     "\n",
     "import matplotlib\n",
     "import numpy\n",
+    "import os\n",
     "from matplotlib import pyplot\n",
     "from matplotlib import patches\n",
     "from mpl_toolkits.basemap import Basemap\n",
-    "from obspy.imaging.beachball import Beach"
+    "from obspy.imaging.beachball import beach\n",
+    "from IPython.display import Image"
    ]
   },
   {
@@ -140,28 +136,6 @@
     "                llcrnrlon=min_lon, urcrnrlon=max_lon, resolution='l')\n",
     "\n",
     "    return min_lon, max_lon, min_lat, max_lat, m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def create_ses_legend():\n",
-    "    \"\"\"\n",
-    "    Create legend for ses plot.\n",
-    "    \"\"\"\n",
-    "    bb1 = matplotlib.patches.Circle((0, 0), color=MAG_BB_COLORS[0])\n",
-    "    bb2 = matplotlib.patches.Circle((0, 0), color=MAG_BB_COLORS[1])\n",
-    "    bb3 = matplotlib.patches.Circle((0, 0), color=MAG_BB_COLORS[2])\n",
-    "    bb4 = matplotlib.patches.Circle((0, 0), color=MAG_BB_COLORS[3])\n",
-    "    bb5 = matplotlib.patches.Circle((0, 0), color=MAG_BB_COLORS[4])\n",
-    "    matplotlib.pyplot.legend([bb1, bb2, bb3, bb4, bb5],\n",
-    "        ['Mw < 5','5 <= Mw < 6', '6 <= Mw < 7', '7 <= Mw <= 8', 'Mw > 8'], numpoints=1)"
    ]
   },
   {
@@ -240,72 +214,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# define map projection\n",
-    "min_lon, max_lon, min_lat, max_lat, m = get_map_projection(src)"
+    "def write_ruptures_file(src, fname):\n",
+    "    fou = open(fname, 'w')   \n",
+    "    for rup in src.iter_ruptures():\n",
+    "        surf = rup.surface\n",
+    "        fou.write('> -Z{:.2f}\\n'.format(rup.mag))\n",
+    "        if hasattr(surf, 'top_left'):\n",
+    "            lons, lats = get_planar_surface_boundary(surf)\n",
+    "        else:\n",
+    "            lons, lats = get_mesh_boundary(surf.mesh)\n",
+    "\n",
+    "        for lo, la in zip(lons, lats):\n",
+    "            fou.write('{:.4f} {:.4f}\\n'.format(lo, la))\n",
+    "    fou.close()\n",
+    "\n",
+    "    \n",
+    "def write_fm_file(ses, fname):\n",
+    "    fou = open(fname, 'w')\n",
+    "    for rup in ses:\n",
+    "        strike = rup.surface.get_strike()\n",
+    "        dip = rup.surface.get_dip()\n",
+    "        rake = rup.rake\n",
+    "        lo = rup.hypocenter.longitude\n",
+    "        la = rup.hypocenter.latitude\n",
+    "        de = rup.hypocenter.depth\n",
+    "        mag = rup.mag\n",
+    "        fmt = '{:.4f} {:.4f} {:.2f} {:.2f} {:.2f} {:.2f} {:.2f}\\n'\n",
+    "        fou.write(fmt.format(lo, la, de, strike, dip, rake, mag))\n",
+    "    fou.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# plot events for event set 1\n",
-    "for i, ses in enumerate([ses1, ses2]):\n",
-    "    fig = pyplot.figure(figsize=(10, 10), dpi=160)\n",
-    "    \n",
-    "    # m.drawparallels(numpy.arange(min_lat, max_lat, 1.), labels=[True, False, False, True])\n",
-    "    # m.drawmeridians(numpy.arange(min_lon, max_lon, 1.), labels=[True, False, False, True])\n",
-    "    m.drawcoastlines()\n",
-    "    m.drawcountries()\n",
-    "    \n",
-    "    x, y = m(src.polygon.lons, src.polygon.lats)\n",
-    "    m.plot(x, y, color='black', linewidth=2)\n",
-    "    \n",
-    "    for rup in ses:\n",
-    "        strike = rup.surface.get_strike()\n",
-    "        dip = rup.surface.get_dip()\n",
-    "        rake = rup.rake\n",
-    "        x, y = m(rup.hypocenter.longitude, rup.hypocenter.latitude)\n",
-    "        [bb_width] = MAG_BB_WIDTHS[numpy.digitize([rup.mag], MAG_BINS) - 1]\n",
-    "        [bb_color] = MAG_BB_COLORS[numpy.digitize([rup.mag], MAG_BINS) - 1]\n",
-    "        beach = Beach([strike, dip, rake], linewidth=1, xy=(x, y),\n",
-    "                      width=bb_width, zorder=bb_width, facecolor=bb_color)\n",
-    "        pyplot.gca().add_collection(beach)\n",
-    "    \n",
-    "    create_ses_legend()\n",
-    "    pyplot.title('Stochastic Event Set %s for time span of %s years' % (i, time_span), fontsize=20)"
+    "fname1 = '/tmp/ses01.txt'\n",
+    "write_fm_file(ses1, fname1)\n",
+    "fname2 = '/tmp/ses02.txt'\n",
+    "write_fm_file(ses2, fname2)\n",
+    "figname = '/tmp/ses.ps'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$fname1\" \"$fname2\" \"$figname\" \n",
+    "\n",
+    "CPT='/tmp/tmp.cpt'\n",
+    "GRD='/tmp/tmp.grd'\n",
+    "TMP='/tmp/tmp.xyz'\n",
+    "\n",
+    "cat $1 $2 > $TMP\n",
+    "EXTENT=$(gmt info -I.5 -D $TMP)\n",
+    "\n",
+    "gmt set MAP_FRAME_TYPE = PLAIN\n",
+    "gmt set MAP_GRID_CROSS_SIZE_PRIMARY = 0.2i\n",
+    "gmt set MAP_FRAME_TYPE = PLAIN\n",
+    "gmt set FONT_TITLE = 12p\n",
+    "gmt set FONT_LABEL = 10p\n",
+    "\n",
+    "gmt psbasemap $EXTENT -Jm2c -K -B1/1WSne > $3\n",
+    "gmt psmeca $1 -R -J -K -O -Sa0.25 >> $3\n",
+    "gmt psmeca $2 -R -J -K -O -Sa0.25 -Gred >> $3\n",
+    "gmt pscoast -R -J -N1 -O -W1 -Dh >> $3\n",
+    "\n",
+    "gmt psconvert $3 -Tg -A -P \n",
+    "rm gmt.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(filename=os.path.splitext(figname)[0]+'.png', width=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
