--- a/hazardlib/03_HazardCurves.ipynb
+++ b/hazardlib/03_HazardCurves.ipynb
@@ -7,16 +7,9 @@
     "editable": true
    },
    "source": [
-    "# Hazard curves calculation in openquake.hazardlib"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
+    "# Hazard curves calculation in openquake.hazardlib\n",
+    "\n",
+    "<tt>\n",
     "\n",
     "LICENSE\n",
     "\n",
@@ -56,7 +49,8 @@
     "PURPOSE. See the GNU General Public License for more details.\n",
     "\n",
     "The GEM Foundation, and the authors of the software, assume no liability for\n",
-    "use of the software."
+    "use of the software.\n",
+    "</tt>"
    ]
   },
   {
@@ -348,27 +342,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
